added header section

--- a/index.html
+++ b/index.html
@@ -8,19 +8,50 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
-   <header>
+    <header>
+        <nav class="nav-container">
+            <div class="nav-title">
+                <h3>Influencer products</h3>
+            </div>
+            <div class="nav-menu">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log in</a></li>
+                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
 
-   </header>
-   <main>
+        </nav>
+        <div class="banner-container">
+            <div class="banner-item">
+                <h1 class="banner-title">Start your Journey as 
+                    Influencer</h1>
+                    <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="banner-btn">Preebook now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-image">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+            
+        </div>
 
-   </main>
-   <footer>
-    
-   </footer>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
