added logo section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,32 @@
 
     </header>
     <main>
+        <!--logo  here-->
+        <section>
+            <div class="logo-container">
+                <div class="logo">
+                    <img src="./logos/Alibaba.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Amazon.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Daraz.pk Logo.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Ebay.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Rakuten.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Walmart.svg" alt="">
+                </div>
+                <div class="logo">
+                    <img src="./logos/Target.svg" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
