added features section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
             <p class="see-more">See More <i class="fa-solid fa-arrow-right see-more"></i></p>
 
         </section>
+        <!--features section-->
+        <section>
+            <div class="features-container">
+                <div class="features-image">
+                    <img src="./images/gear.png" alt="">
+                </div>
+                <div class="features-item">
+                    <h2 class="features-title">Featured products at one place</h2>
+                    <p class="features-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="features-btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
