--- a/index.html
+++ b/index.html
@@ -219,6 +219,15 @@
 
     </main>
     <footer>
+        <div class="footer">
+            <h3>Influencer products</h3>
+            <p>Copyright &copy; 2020  influencer products</p>
+            <p>All rights reserved</p>
+            <span><i class="fa-brands fa-instagram"></i></span>
+            <span><i class="fa-brands fa-facebook-f"></i></span>
+            <span><i class="fa-brands fa-twitter"></i></span>
+            <span><i class="fa-brands fa-youtube"></i></span>
+        </div>
 
     </footer>
 </body>
